# TinyRaylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.sh  vcpkg.json
tinyraylib/src/: main.cpp  main.hpp
